[package]
name = "solana-data-versioning"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.9.2"
thiserror = "1.0.30"

[dev-dependencies]
solana-program-test = "1.9.2"
solana-sdk = "1.9.2"
solana-logger = "1.9.2"

[lib]
crate-type = ["cdylib", "lib"]
